wso2-apim-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wso2am
  labels:
    app: wso2am
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wso2am
    spec:
      containers:
      - image: wso2am:2.1.0
        name: wso2am
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9443
          name: http-servlet
        volumeMounts:
        - name: master-datasources
          mountPath: /home/wso2carbon/wso2am-2.1.0/repository/conf/datasources/
      volumes:
      - name: master-datasources
        configMap:
          name: master-datasources
